--- a/templates/profile.html
+++ b/templates/profile.html
@@ -32,36 +32,6 @@
     <link rel="stylesheet" href="../static/css/styles.css">
     <link rel="stylesheet" href="../static/css/quill.css">
 
-
-    <script src="../static/js/jquery.min.js"></script>
-    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-
-    <script src="../static/js/server_function/announcement_editor.js"></script>
-    <script src="../static/js/server_function/server_bridge.js"></script>
-    <script src="../static/js/server_function/cookie_manager.js"></script>
-    <script src="../static/js/init.js"></script>
-
-    <script src="../static/js/website_function/navbar.js"></script>
-    <script src="../static/js/website_function/-Countdown-BS4-.js"></script>
-    <script src="../static/js/website_function/-Fixed-Navbar-start-with-transparency-BS4-.js"></script>
-    <script src="../static/js/website_function/Bold-BS4-Animated-Back-To-Top.js"></script>
-    <script src="../static/js/website_function/Sidebar-Menu.js"></script>
-    <script src="../static/js/website_function/Profile-Edit-Form.js"></script>
-    <script src="../static/js/website_function/Smooth-Scrollto-button-read-Description.js"></script>
-    <script src="../static/js/website_function/failed_login_modal.js"></script>
-    <script src="../static/js/website_function/logout.js"></script>
-
-    <script src="../static/js/server_function/signup_form.js"></script>
-    <script src="../static/js/server_function/login_form.js"></script>
-    <script src="../static/js/server_function/dashboard.js"></script>
-    <script src="../static/js/server_function/post_announcement.js"></script>
-    <script src="../static/js/server_function/user_announcements.js"></script>
-    <script src="../static/js/server_function/confirmation_confirmed.js"></script>
-    <script src="../static/js/server_function/add_student.js"></script>
-    <script src="../static/js/server_function/review_confirmed.js"></script>
-    <script src="../static/js/server_function/students.js"></script>
-
 </head>
 
 <body>
@@ -114,7 +84,7 @@
                                 <div class="alert alert-info absolue center" role="alert"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button><span>Profile save with success</span></div>
                             </div>
                         </div>
-                        <form>
+                        <form id="profile_form">
                             <div class="form-row profile-row" style="font-family:'News Cycle', sans-serif;color:rgb(0,0,0);">
                                 <div class="col-md-4 relative">
                                     <div class="avatar">
@@ -145,7 +115,10 @@
                                 </div>
                                 <hr>
                                 <div class="form-row">
-                                    <div class="col-md-12 content-right"><button class="btn btn-primary form-btn" type="submit">SAVE </button><button class="btn btn-danger form-btn" type="reset">CANCEL </button></div>
+                                    <div class="col-md-12 content-right">
+                                        <button id="save_button" class="btn btn-primary form-btn" type="submit">SAVE </button>
+                                        <button id="cancel_button" class="btn btn-danger form-btn" type="reset">CANCEL </button>
+                                    </div>
                                 </div>
                             </div>
                     </div>
@@ -164,7 +137,35 @@
                 <p class="copyright" style="color:rgb(255,255,255);">Alphel @ 2018</p>
         </footer><a href="#0" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url('../static/img/cd-top-arrow.svg');width:40px;height:40px;">Top</a></div>
 
+    <script src="../static/js/jquery.min.js"></script>
+    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 
+    <script src="../static/js/server_function/announcement_editor.js"></script>
+    <script src="../static/js/server_function/server_bridge.js"></script>
+    <script src="../static/js/server_function/cookie_manager.js"></script>
+    <script src="../static/js/init.js"></script>
+
+    <script src="../static/js/website_function/navbar.js"></script>
+    <script src="../static/js/website_function/-Countdown-BS4-.js"></script>
+    <script src="../static/js/website_function/-Fixed-Navbar-start-with-transparency-BS4-.js"></script>
+    <script src="../static/js/website_function/Bold-BS4-Animated-Back-To-Top.js"></script>
+    <script src="../static/js/website_function/Sidebar-Menu.js"></script>
+    <script src="../static/js/website_function/Profile-Edit-Form.js"></script>
+    <script src="../static/js/website_function/Smooth-Scrollto-button-read-Description.js"></script>
+    <script src="../static/js/website_function/failed_login_modal.js"></script>
+    <script src="../static/js/website_function/logout.js"></script>
+
+    <script src="../static/js/server_function/profile.js"></script>
+    <script src="../static/js/server_function/signup_form.js"></script>
+    <script src="../static/js/server_function/login_form.js"></script>
+    <script src="../static/js/server_function/dashboard.js"></script>
+    <script src="../static/js/server_function/post_announcement.js"></script>
+    <script src="../static/js/server_function/user_announcements.js"></script>
+    <script src="../static/js/server_function/confirmation_confirmed.js"></script>
+    <script src="../static/js/server_function/add_student.js"></script>
+    <script src="../static/js/server_function/review_confirmed.js"></script>
+    <script src="../static/js/server_function/students.js"></script>
 
 
 </body>
