--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,11 @@
                                 <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="padding-right:20px;"><i class="fa fa-info-circle" style="padding-right:7px;"></i>Info</a>
                                     <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#about"><i class="fa fa-handshake-o" style="padding-right:5px;"></i>About Us</a><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#contact"><i class="fa fa-volume-control-phone" style="padding-right:5px;"></i>Contact</a></div>
                                 </li>
-                                <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" id="nav_user" style="padding-right:20px;display:none;"><i class="fa fa-user" style="padding-right:7px;"></i>User</a>
+                                <li class="dropdown">
+                                    <a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" id="nav_user" style="padding-right:20px;display:none;">
+                                    <i class="fa fa-user" style="padding-right:7px;"></i>
+                                        User
+                                    </a>
                                     <div class="dropdown-menu" role="menu">
                                         <a class="dropdown-item" role="presentation" href="profile.html">
                                             <i class="fa fa-address-card" style="padding-right:5px;"></i>Profile
