--- a/templates/profile.html
+++ b/templates/profile.html
@@ -107,12 +107,15 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-group"><label>Email </label><input disabled class="form-control"></div>
+                                    <div class="form-group">
+                                        <label>Email </label>
+                                        <input id="email" disabled class="form-control">
+                                    </div>
                                     <div class="form-row">
                                         <div class="col-sm-12 col-md-6">
                                             <div class="form-group">
-                                                <label>Grade</label>
-                                                <select id="grade">
+                                                <label id="grade_label">Grade</label>
+                                                <select id="grade_input">
                                                     <option value="9">9</option>
                                                     <option value="10">10</option>
                                                     <option value="11">11</option>
